add resource class